# vpod

./: .gitignore  Cargo.toml  LICENSE  README.md  release.md
.github/workflows/: build-aot.yml  build-binaries.yml  build-snapshots.yml  ci.yml  release.yml
crates/capsulev/: Cargo.toml  build.rs
crates/capsulev/src/: main.rs  pull.rs  registry.rs  run.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  run_interactive.rs  run_setup.rs  terminal.rs
crates/kernelv-cli/: Cargo.toml
crates/machine/: Cargo.toml
crates/machine/assets/tls/: vpod-ca-cert.pem  vpod-ca-key.pem
crates/machine/src/: clint.rs  cow_ram.rs  crypto_handler.rs  dtb.rs  instance.rs  lib.rs  machine_bus.rs  plic.rs  snapshot.rs  tls_handler.rs  uart.rs
crates/machine/src/virtio/: blk.rs  console.rs  crypto.rs  fs.rs  https_gateway.rs  mod.rs  net.rs  slirp.rs  tls_proxy.rs
crates/machine/src/virtio/tls_proxy/: mod.rs  tests.rs  testutil.rs
crates/native-cli/: Cargo.toml
crates/native-cli/src/: main.rs  run_interactive.rs  run_setup.rs  terminal.rs
crates/riscv-core/: Cargo.toml
crates/riscv-core/src/: aot.rs  block.rs  csr.rs  decode.rs  execute.rs  extensions.rs  gpr.rs  hart.rs  lib.rs  mmu.rs  perf.rs  system_bus.rs  trap.rs  vec.rs
crates/riscv-core/tests/: differential.rs
crates/vpod/: Cargo.toml  build.rs
crates/vpod-translate/: Cargo.toml
crates/vpod-translate/src/: main.rs
crates/vpod/src/: main.rs  pull.rs  registry.rs  start.rs
crates/wasi-component/: Cargo.toml  capsulev.wit  vpod.wit
crates/wasi-component/.cargo/: config.toml
crates/wasi-component/src/: lib.rs  main.rs  repl.rs  run_interactive.rs  run_worker.rs  vm.rs
crates/wasi-component/src/api/: executor.rs  http.rs  mod.rs  session.rs
crates/wasi-component/wit/: capsulev.wit
crates/wasm-component/: Cargo.toml
crates/wasm-component/src/: logger.rs  main.rs  run_interactive.rs  run_worker.rs
docs/: python-sdk-architecture.md
guest/tls/: vpod_libssl_shim.c  vpod_ssl_client.c
guest/warmpy/: pydaemon.py  vpod_python_shim.c
registry/: catalog.json
scripts/: aot-diff.sh  aot-snapshot.sh  aot-stub.sh  build-data-snapshot.sh  build-default-snapshot.sh  build-registry-bundle.sh  build-wasm.sh  prepare-crate.sh
sdks/python/: README.md  ab_loop.py  measure-vpod-pkgm.py  measure-vpod.py  probe-bg.py  probe-desync.py  probe-family.py  probe-mcp-deps.py  probe-oom.py  probe-suspend.py  pyproject.toml  python-test.py  test-mcp-server.py  test-pkg-import.py
sdks/python/tests/: conftest.py  test_instance.py  test_integration.py  test_vpod.py
sdks/python/vpod/: __init__.py  _component.py  _precompile.py  _result.py  code.py  commands.py  execution.py  http.py  install.py  sandbox.py  snapshots.py
