[package]
name = "machine"
version = "0.0.0"
edition = "2024"

[dependencies]
riscv-core = { path = "../riscv-core" }
log = "0.4"
x25519-dalek = { version = "2", features = ["static_secrets"] }
p256 = { version = "0.13", features = ["ecdsa"] }
rsa = { version = "0.9", features = ["sha2"] }
sha2 = { version = "0.10", features = ["oid"] }
ed25519-dalek = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
