[package]
name = "machine"
version = "0.0.0"
edition = "2024"

[dependencies]
riscv-core = { path = "../riscv-core" }
log = "0.4"
x25519-dalek = { version = "2", features = ["static_secrets"] }
p256 = { version = "0.13", features = ["ecdsa", "digest"] }
rsa = { version = "0.9", features = ["sha2"] }
sha1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
ed25519-dalek = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
aes-gcm = "0.10"
webpki-roots = "0.26"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["std", "aws_lc_rs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-rustcrypto = "0.0.2-alpha"
