[package]
name = "machine"
version = "0.0.0"
edition = "2024"

[dependencies]
riscv-core = { path = "../riscv-core" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-rustcrypto = "0.0.2-alpha"
rustls-pki-types = "1"
webpki-roots = "0.26"
x509-cert = { version = "0.2", features = ["builder"] }
p256 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }
der = { version = "0.7", features = ["pem"] }
const-oid = { version = "0.9", features = ["db"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring", "aws-lc-rs"] }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
