[package]
name = "native-cli"
version = "0.0.0"
edition.workspace = true

[dependencies]
machine = { path = "../machine" }
riscv-core = { path = "../riscv-core" }
env_logger = "0.11"
lz4_flex = "0.13.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "vpod-native"
path = "src/main.rs"
