[package]
name = "vpod"
version = "0.0.0"
edition.workspace = true
description = "Lightweight, secure sandboxes for untrusted processes."
license = "Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/capsulerun/vpod"
homepage = "https://github.com/capsulerun"
documentation = "https://github.com/capsulerun/vpod#readme"
keywords = ["sandbox", "wasm", "riscv", "agent", "isolation"]
categories = ["command-line-utilities", "virtualization", "wasm"]
include = [
    "src/**/*",
    "build.rs",
    "vpod-wasi-cli.wasm",
    "../../README.md",
    "../../LICENSE*"
]

[[bin]]
name = "vpod"
path = "src/main.rs"

[dependencies]
wasmtime = "31"
wasmtime-wasi = "31"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
libc = "0.2"
