[package]
name = "wasi-component"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "vpod_wasi_lib"
path = "src/lib.rs"

[[bin]]
name = "vpod-wasi-cli"
path = "src/main.rs"

[dependencies]
machine = { path = "../machine" }
riscv-core = { path = "../riscv-core", features = ["aot"] }
log = "0.4"
wasi = "0.14.7"
lz4_flex = "0.13.1"
wit-bindgen = "0.57"
base64 = "0.22"
