[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpod"
version = "0.0.0"
description = "Secure code execution sandbox powered by RISC-V and WASM"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "vpod" }]
dependencies = [
    "wasmtime>=25.0.0",
    "platformdirs>=4.0",
    "certifi>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
markers = ["integration: requires a real WASM build and snapshot (run with -m integration)"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vpod*"]

[tool.setuptools.package-data]
vpod = ["*.wasm"]
